# TCode

./: .gitignore  CLAUDE.md  README.md  build-server.mjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
server/: AgentManager.ts  db.ts  index.ts  start.js
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AgentGrid.tsx  AgentModal.tsx  AgentPanel.tsx
src/hooks/: useAgentSocket.ts
src/store/: agentStore.ts
