[package]
name = "tcode"
version = "1.0.0"
description = "TCode - Multi-agent Claude Code dashboard"
authors = []
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tcode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
